# blender-script-dirs-manager

./: .gitignore  LICENSE  README.md  manage_script_dirs.py  mypy.ini  pyproject.toml  ruff.toml
tests/: launch.py
tests/script_dirs/project_01/script_dir/addons/: proj_01_addon_01.py  proj_01_addon_02.py
tests/script_dirs/project_01/script_dir/addons/proj_01_addon_03/: __init__.py
tests/script_dirs/project_01/script_dir/modules/: proj_01_utils.py
tests/script_dirs/project_01/script_dir/startup/: proj_01_startup_01.py  proj_01_startup_02.py
tests/script_dirs/project_02/script_dir/addons/: proj_02_addon_01.py  proj_02_addon_02.py
tests/script_dirs/project_02/script_dir/addons/proj_02_addon_03/: __init__.py
tests/script_dirs/project_02/script_dir/modules/: proj_02_utils.py
tests/script_dirs/project_02/script_dir/startup/: proj_02_startup_01.py  proj_02_startup_02.py
tests/script_dirs/studio/plugins/blender/addons/: studio_addon_01.py
tests/script_dirs/studio/plugins/blender/startup/: studio_startup_01.py
